--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "watch:css": "chokidar ${npm_package_config_styles_all} -c 'npm run lint:css && npm run sass:_site && browser-sync reload'",
     "watch:js": "chokidar 'src/scripts/*' -c 'npm run eslint && npm run babel && npm run uglify:home && npm run uglify:post && npm run update:js && browser-sync reload'",
     "serve": "browser-sync start --http --server _site",
-    "start": "npm run build -s && parallelshell \"npm run serve -s\" \"npm run watch:jekyll -s\" \"npm run watch:css -s\" \"npm run watch:js -s\"",
+    "start": "npm run build && concurrently \"npm run serve\" \"npm run watch:jekyll\" \"npm run watch:css\" \"npm run watch:js\"",
     "after": "rm -rf _site/scripts/temp"
   },
   "devDependencies": {
@@ -63,13 +63,13 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.11.1",
     "browserify": "^14.4.0",
+    "concurrently": "^5.2.0",
     "eslint": "^6.5.1",
     "eslint-config-google": "^0.3.0",
     "image-min": "^0.3.2",
     "imagemin": "^5.3.1",
     "imagemin-cli": "^3.0.0",
     "node-sass": "^3.13.1",
-    "parallelshell": "^3.0.0",
     "postcss": "^5.0.14",
     "postcss-cli": "^2.5.0",
     "sass-lint": "^1.11.1",
@@ -83,7 +83,6 @@
     "critical": "^0.7.0",
     "global": "^4.3.2",
     "grunt": "^1.0.1",
-    "parallelshell": "^3.0.0",
     "psi": "^2.0.2"
   }
 }
