--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "libs": "cp -R src/scripts/libs dist/scripts/libs",
     "babel": "babel src/scripts --out-dir dist/scripts/temp",
     "uglify:home": "uglifyjs dist/scripts/temp/libs/fontface-observer.js dist/scripts/temp/fonts.js dist/scripts/temp/navigation.js -o dist/scripts/home.min.js",
-    "uglify:post": "uglifyjs dist/scripts/temp/arrow.js -o dist/scripts/post.min.js",
+    "uglify:post": "uglifyjs dist/scripts/temp/arrow.js -o dist/scripts/arrow.min.js",
+    "uglify:blog": "uglifyjs dist/scripts/temp/blog.js -o dist/scripts/blog.min.js",
     "update:js": "cp -R dist/scripts _site/dist",
-    "uglify": "npm run uglify:home && npm run uglify:post",
+    "uglify": "npm run uglify:home && npm run uglify:post && npm run uglify:blog",
     "clean": "rm -rf dist && rm -rf _site",
     "prefix": "postcss --use autoprefixer -b 'last 3 versions' --output ${npm_package_config_styles_dist} ${npm_package_config_styles_dist}",
     "sass:dist": "node-sass --output-style compressed ${npm_package_config_styles_src} ${npm_package_config_styles_dist}",
@@ -51,7 +52,7 @@
     "build": "npm run clean && npm run prepare && npm run build:images && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical && npm run after",
     "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' '_category/**/*' 'blog/*' 'thoughts/*' 'my-closet/*' 'pt-br/**/*' '_config.yml' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
     "watch:css": "chokidar ${npm_package_config_styles_all} -c 'npm run lint:css && npm run sass:_site && browser-sync reload'",
-    "watch:js": "chokidar 'src/scripts/*' -c 'npm run eslint && npm run babel && npm run uglify:home && npm run uglify:post && npm run update:js && browser-sync reload'",
+    "watch:js": "chokidar 'src/scripts/*' -c 'npm run eslint && npm run babel && npm run uglify:home && npm run uglify:post && npm run uglify:blog && npm run update:js && browser-sync reload'",
     "serve": "browser-sync start -w --server _site",
     "start": "npm run build && concurrently \"npm run serve\" \"npm run watch:jekyll\" \"npm run watch:css\" \"npm run watch:js\"",
     "after": "rm -rf _site/scripts/temp"
