--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,7 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
-# media_folder: 'assets/uploads'
+media_folder: 'assets/uploads'
 collections:
   - name: 'blog'
     label: 'Blog'
