--- a/_data/gear.yml
+++ b/_data/gear.yml
@@ -22,7 +22,7 @@
         small: https://user-images.githubusercontent.com/1345662/115322249-a22abf00-a153-11eb-961f-affc19b62b78.jpg
         big: https://user-images.githubusercontent.com/1345662/115322247-a1922880-a153-11eb-8658-d84b3e407904.jpg
     -
-      name: Under Armour Youth Menace Sunglasses
+      name: Under Armour Rival
       image:
         small: https://user-images.githubusercontent.com/1345662/115322384-f9309400-a153-11eb-9f9b-7fffbd8e577e.jpg
         big: https://user-images.githubusercontent.com/1345662/115322383-f897fd80-a153-11eb-9478-271f2d51a2da.jpg
@@ -65,10 +65,10 @@
   icon: 🏊‍♂️
   items:
     -
-      name: Aqua Sphere Kayenne
+      name: Roka R1
       image:
-        small: https://user-images.githubusercontent.com/1345662/115170295-4a765000-a08e-11eb-862e-a43f8e7f1290.jpg
-        big: https://user-images.githubusercontent.com/1345662/115170293-4a765000-a08e-11eb-8648-b20304d31545.jpg
+        small: https://user-images.githubusercontent.com/1345662/125878604-2d7d13c4-b83a-4da4-b229-317562c41757.png
+        big: https://user-images.githubusercontent.com/1345662/125878577-3585571f-34ac-4acb-89fa-de54578cfc81.png
     -
       name: TheMagic5 Purple Edition
       image:
