--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
+local_backend: true
 media_folder: 'src/images'
 publish_mode: editorial_workflow
 collections:
