--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "build:js": "npm run eslint && npm run babel && npm run uglify && npm run libs",
     "build:css": "npm run sass && npm run prefix",
     "build:images": "npm run imagemin && cp -r src/images/favicon dist/images/favicon",
+    "build:media": "cp -r src/media dist/media",
     "prepare": "mkdir -p dist dist/images dist/scripts dist/styles && mkdir -p _site _site/dist/images _site/dist/scripts _site/dist/scripts/temp _site/dist/styles",
     "build": "npm run clean && npm run prepare && npm run build:images && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical && npm run after",
     "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' '_data/*' '_category/**/*' 'blog/*' 'thoughts/*' 'my-closet/*' 'gear/*' 'venda/*' 'pt-br/**/*' '_config.yml' 'admin/*' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
