--- a/_data/gear.yml
+++ b/_data/gear.yml
@@ -2,15 +2,15 @@
   icon: 🏃‍♂️
   items:
     -
-      name: Hoka One One Carbon X2
+      name: Adidas Adizero Adios Pro 2
       image:
-        small: https://user-images.githubusercontent.com/1345662/147418625-2ce91ec4-07e4-4743-89af-a5b65eb6b4cf.jpg
-        big: https://user-images.githubusercontent.com/1345662/147418624-a165dba4-577f-4662-a2dd-75e8dca86868.jpg
+        small: https://user-images.githubusercontent.com/1345662/152707953-2c59d9ee-acec-4683-af35-d14811622421.jpg
+        big: https://user-images.githubusercontent.com/1345662/152707955-4a21a32d-6b2f-48bb-a6e7-0608ce8fd3c1.jpg
     -
-      name: Hoka One One Clifton 8
+      name: Nike Air Zoom Tempo NEXT%
       image:
-        small: https://user-images.githubusercontent.com/1345662/147418626-6551349d-69ae-456a-87a3-b2d63c26c173.jpg
-        big: https://user-images.githubusercontent.com/1345662/147418628-9e9e02ab-7a30-4bcb-a661-6e1efdeed9d2.jpg
+        small: https://user-images.githubusercontent.com/1345662/152707956-c26d90bf-ace4-4b38-9584-9bc8d07f96e5.jpg
+        big: https://user-images.githubusercontent.com/1345662/152707957-56e29035-1fc9-40b7-abe5-f9ad7ba7d77e.jpg
     -
       name: Nike Zoom Fly SP
       image:
