--- a/_data/gear.yml
+++ b/_data/gear.yml
@@ -152,7 +152,13 @@
   icon: 📉
   items:
     -
+      name: Garmin Forerunner 955 Solar
+      image:
+        small: https://user-images.githubusercontent.com/1345662/190927661-62369bf3-e59b-4c4d-9cd6-fa6bd67dc1d0.jpg
+        big: https://user-images.githubusercontent.com/1345662/190927662-d583604e-d88e-467f-a7a2-f2295ae6d44e.jpg
+    -
       name: Garmin Forerunner 945
+      retired: true
       image:
         small: https://user-images.githubusercontent.com/1345662/115321062-1152e400-a151-11eb-8024-4364e07b53aa.jpg
         big: https://user-images.githubusercontent.com/1345662/115321063-11eb7a80-a151-11eb-9a1b-781bf16ffe20.jpg
