--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "raphaelfabeni.github.io",
   "version": "2.0.0",
-  "title": "Raphael Fabeni - Blog",
+  "title": "Raphael Fabeni",
   "homepage": "http://www.raphaelfabeni.com.br",
   "author": "Raphael Fabeni",
   "license": "ISC",
