--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "title": "Raphael Fabeni",
   "homepage": "https://www.raphaelfabeni.com.br",
   "author": "Raphael Fabeni",
-  "license": "ISC",
+  "license": "ISasC",
   "bugs": {
     "url": "https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues"
   },
