--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,8 +7,24 @@ jobs:
   label_prs:
     runs-on: ubuntu-latest
     steps:
-    - name: Label PRs
-      if: github.event.action == 'opened'
-      uses: ffittschen/pr-branch-labeler@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+
+      - uses: KyoriPowered/action-regex-match@v3
+        id: regex-match
+        with:
+          text: ${{ github.event.comment.body }}
+          regex: '^/label\s*(.*?)\s*$'
+
+      - uses: actions-ecosystem/action-add-labels@v1
+        if: ${{ steps.regex-match.outputs.match != '' }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          labels: ${{ steps.regex-match.outputs.group1 }}
+
+
+
+#     - name: Label PRs
+#       if: github.event.action == 'opened'
+#       uses: ffittschen/pr-branch-labeler@v1
+#       with:
+#         repo-token: ${{ secrets.GITHUB_TOKEN }}
