Update package.json label test
label test

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "title": "Raphael Fabeni",
   "homepage": "https://www.raphaelfabeni.com.br",
-  "author": "Raphael Fabeni",
+  "author": "Raphael Fabedsni",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues"
