--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: Raphael Fabeni
 name: Raphael Fabeni
 email: rapha.fabeni@gmail.com
-description: A brazilian front-end developer who loves the web, electronic music and
-  travels.
+description: An amateur triathlete, currently working as Engineering Manager at Red Ventures.
 baseurl: ''
 url: https://www.raphaelfabeni.com
 exclude:
