--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "raphaelfabeni.github.io",
   "version": "2.0.0",
   "title": "Raphael Fabeni",
-  "homepage": "https://www.raphaelfabeni.com",
+  "homepage": "https://raphaelfabeni.com",
   "author": "RaphaelFabeni",
   "license": "ISC",
   "bugs": {
