--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Raphael Fabeni
 name: Raphael Fabeni
 email: rapha.fabeni@gmail.com
-description: An amateur triathlete, currently working as Engineering Manager at Red Ventures.
+description: A passionate amateur triathlete and current Director of Engineering at Red Ventures.
 baseurl: ''
 url: https://raphaelfabeni.com
 exclude:
